[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qteleport"
version = "0.1.0"
description = "Quantum teleportation protocols in Qiskit"
authors = [{ name = "Kaavya Iyer" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "qiskit",
    "qiskit-aer",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]